--- a/test/main.html
+++ b/test/main.html
@@ -154,7 +154,7 @@
 		</form>
 		<script>
 			KindEditor.DEBUG = true;
-			KindEditor.options.filterMode = false;
+			KindEditor.options.filterMode = true;
 			//document.domain = 'domain.com';
 			KindEditor.basePath = '../';
 			KindEditor.ready(function(K) {
