--- a/test/dialog.html
+++ b/test/dialog.html
@@ -27,6 +27,7 @@
 		<h1>KindEditor Dialog Test</h1>
 		<input type="button" id="create1" value="Create" />
 		<input type="button" id="create2" value="Create(no shadow)" />
+		<div style="height:2000px;"></div>
 		<script>
 			K('#create1').click(function() {
 				var dialog = K.dialog({
