--- a/test/main.html
+++ b/test/main.html
@@ -62,7 +62,8 @@
 	<tbody>
 		<tr>
 			<td>
-				&nbsp;
+				&nbsp;<img border="0" alt="" src="http://www.iteye.com/images/logo.gif?1324994303" />
+
 			</td>
 			<td>
 				<br />
