Fix bug where Pull Requests 52

--- a/test/main.html
+++ b/test/main.html
@@ -58,7 +58,7 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"><p></p><p></p><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
 	<tbody>
 		<tr>
 			<td>
