--- a/test/main.html
+++ b/test/main.html
@@ -118,7 +118,12 @@
 	</tbody>
 </table></textarea>
 			<br />
-			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"></textarea>
+			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;">
+<p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
+<p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
+<p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
+<p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
+			</textarea>
 			<br />
 			<select id="uploadFile">
 				<option value="">附件列表</option>
@@ -126,7 +131,7 @@
 			<br />
 			HTML计数：<span id="J_count1"></span>
 			<br />
-			<iframe src="http://test.domain.com/github-kindsoft/kindeditor/test/leak.html"></iframe>
+			<!-- <iframe src="http://test.domain.com/github-kindsoft/kindeditor/test/leak.html"></iframe> -->
 			<textarea id="insertHtml" style="width:90%;"><!-- comment test --><strong>abcd</strong></textarea>
 			<br />
 			<input type="button" id="create1" value="Create #1" />
