--- a/test/main.html
+++ b/test/main.html
@@ -58,12 +58,13 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"><p></p><p></p><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;">
+<img src="http://www.kindsoft.net/ke4/attached/2009321101428.jpg" alt="" />
+				<p></p><p></p><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
 	<tbody>
 		<tr>
 			<td>
-				&nbsp;<img border="0" alt="" src="http://www.iteye.com/images/logo.gif?1324994303" />
-
+				&nbsp;
 			</td>
 			<td>
 				<br />
