--- a/test/main.html
+++ b/test/main.html
@@ -119,7 +119,7 @@
 	</tbody>
 </table></textarea>
 			<br />
-			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;">
+			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><input checked="checked" type="radio">
 <p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
 <p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
 <p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
@@ -161,7 +161,7 @@
 		</form>
 		<script>
 			KindEditor.DEBUG = true;
-			KindEditor.options.filterMode = true;
+			KindEditor.options.filterMode = false;
 			//document.domain = 'domain.com';
 			KindEditor.basePath = '../';
 			KindEditor.ready(function(K) {
