--- a/test/main.html
+++ b/test/main.html
@@ -59,6 +59,9 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;">
+<select style="display:none"><option>abcd</option></select>
+<button type="button" style="display:none" contenteditable="false">aa</button>
+<input type="file" style="display:none">
 <img src="http://www.kindsoft.net/ke4/attached/2009321101428.jpg" alt="" />
 				<p></p><p></p><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
 	<tbody>
