--- a/test/main.html
+++ b/test/main.html
@@ -59,68 +59,8 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;">
-<select style="display:none"><option>abcd</option></select>
-<button type="button" style="display:none" contenteditable="false">aa</button>
-<input type="file" style="display:none">
-<img src="http://www.kindsoft.net/ke4/attached/2009321101428.jpg" alt="" />
-				<p></p><p></p><a href="#">aaaaaaaaaaaaa</a><table style="width:100%;" border="1" cellspacing="0" cellpadding="2">
-	<tbody>
-		<tr>
-			<td>
-				&nbsp;
-			</td>
-			<td>
-				<br />
-			</td>
-			<td>
-				<br />
-			</td>
-			<td>
-				<br />
-			</td>
-			<td>
-				&nbsp;
-			</td>
-			<td>
-				<br />
-			</td>
-		</tr>
-		<tr>
-			<td rowspan="2">
-				&nbsp;
-			</td>
-			<td>
-				<br />
-			</td>
-			<td rowspan="2">
-				<br />
-			</td>
-			<td>
-				<br />
-			</td>
-			<td>
-				&nbsp;1
-			</td>
-			<td>
-				<br />
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<br />
-			</td>
-			<td>
-				<br />
-			</td>
-			<td>
-				&nbsp;2
-			</td>
-			<td>
-				<br />
-			</td>
-		</tr>
-	</tbody>
-</table></textarea>
+<img src="/kindeditor/plugins/emoticons/images/0.gif" alt="" border="0" /><strong>dddd</strong><br />
+</textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><input checked="checked" type="radio">
 <p>在 Opera 浏览器下使用 KindEditor 有这么一个问题，当你编辑一篇长文章，而且编辑器中的内容已经滚动到最底部时，这时候我复制了一些文本到文章最底下。编辑器就会自动将内容滚动的最开始，然后我又要拉滚动条到最下方去添加更多内容。</p>
