--- a/test/main.html
+++ b/test/main.html
@@ -59,7 +59,7 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;">
-<img src="/kindeditor/plugins/emoticons/images/0.gif" alt="" border="0" /><strong>dddd</strong><br />
+<img src="http://www.kindsoft.net/ke4/attached/W020091124524510014093.jpg" alt="" /><strong>dddd</strong><br />
 </textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><input checked="checked" type="radio">
