Add korean language package

--- a/examples/multi-language.html
+++ b/examples/multi-language.html
@@ -36,6 +36,7 @@
 					<option value="en">English</option>
 					<option value="zh_CN">简体中文</option>
 					<option value="zh_TW">繁體中文</option>
+					<option value="ko">Korean</option>
 					<option value="ar">Arabic</option>
 				</select>
 			</p>
