--- a/examples/jquery-ui.html
+++ b/examples/jquery-ui.html
@@ -17,10 +17,10 @@
 				display: none;
 			}
 		</style>
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-		<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-		<script charset="utf-8" src="../kindeditor-min.js"></script>
+		<link rel="stylesheet" href="../lib/jquery-ui/css/smoothness/jquery-ui-1.9.2.custom.css" />
+		<script charset="utf-8" src="../lib/jquery.js"></script>
+		<script charset="utf-8" src="../lib/jquery-ui/js/jquery-ui-1.9.2.custom.js"></script>
+		<script charset="utf-8" src="../kindeditor.js"></script>
 		<script charset="utf-8" src="../lang/zh_CN.js"></script>
 		<script>
 			$(function() {
