--- a/examples/mootools.html
+++ b/examples/mootools.html
@@ -11,7 +11,7 @@
 				display: block;
 			}
 		</style>
-		<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/mootools/1.4.1/mootools-yui-compressed.js"></script>
+		<script charset="utf-8" src="../lib/mootools.js"></script>
 		<script charset="utf-8" src="../kindeditor-min.js"></script>
 		<script charset="utf-8" src="../lang/zh_CN.js"></script>
 		<script>
