--- a/examples/jquery.html
+++ b/examples/jquery.html
@@ -11,7 +11,7 @@
 				display: block;
 			}
 		</style>
-		<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+		<script charset="utf-8" src="../lib/jquery.js"></script>
 		<script charset="utf-8" src="../kindeditor-min.js"></script>
 		<script charset="utf-8" src="../lang/zh_CN.js"></script>
 		<script>
