--- a/examples/jquery-ui.html
+++ b/examples/jquery-ui.html
@@ -18,6 +18,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="../lib/jquery-ui/css/smoothness/jquery-ui-1.9.2.custom.css" />
+		<link rel="stylesheet" href="../themes/default/default.css" />
 		<script charset="utf-8" src="../lib/jquery.js"></script>
 		<script charset="utf-8" src="../lib/jquery-ui/js/jquery-ui-1.9.2.custom.js"></script>
 		<script charset="utf-8" src="../kindeditor.js"></script>
