--- a/test/main.html
+++ b/test/main.html
@@ -115,6 +115,7 @@
 					urlType : 'absolute',
 					themeType : 'simple',
 					allowImageUpload : true,
+					allowImageRemote : false,
 					allowFileUpload : true,
 					designMode : true,
 					allowFileManager : true,
