--- a/test/main.html
+++ b/test/main.html
@@ -244,6 +244,10 @@
 					});
 				});
 				K.create('textarea[name=content1]');
+
+				//K(window).bind('resize', function(e) {
+				//	editor1.resize(null, document.documentElement.clientHeight);
+				//});
 			});
 		</script>
 		</td>
