--- a/examples/dynamic-load.html
+++ b/examples/dynamic-load.html
@@ -11,7 +11,7 @@
 				display: block;
 			}
 		</style>
-		<script charset="utf-8" src="../lib/jquery.js"></script>
+		<script charset="utf-8" src="jquery.js"></script>
 		<script>
 			$(function() {
 				$('input[name=load]').click(function() {
