--- a/examples/jquery.html
+++ b/examples/jquery.html
@@ -12,7 +12,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="../themes/default/default.css" />
-		<script charset="utf-8" src="../lib/jquery.js"></script>
+		<script charset="utf-8" src="jquery.js"></script>
 		<script charset="utf-8" src="../kindeditor-min.js"></script>
 		<script charset="utf-8" src="../lang/zh_CN.js"></script>
 		<script>
