Fix issue #120: getAttribute instead of getAttributeNode

--- a/test/selector.html
+++ b/test/selector.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>KindEditor Unittest</title>
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
-		<script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script>
+		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.js"></script>
 		<!-- include src files -->
