--- a/test/main.html
+++ b/test/main.html
@@ -58,7 +58,7 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;">
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:500px;"><a href="#">aaaaaa</a><a href="#">bbbbbb</a>
 <img src="http://www.kindsoft.net/ke4/attached/W020091124524510014093.jpg" alt="" /><strong>dddd</strong><br />
 </textarea>
 			<br />
