Fix issue #102: pagebreak bug

--- a/test/main.html
+++ b/test/main.html
@@ -58,8 +58,12 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:500px;"><a href="#">aaaaaa</a><a href="#">bbbbbb</a>
-<img src="http://www.kindsoft.net/ke4/attached/W020091124524510014093.jpg" alt="" /><strong>dddd</strong><br />
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:500px;"><div>
+    <img alt="" src="/kindeditor/plugins/emoticons/images/0.gif" /> 
+    <div>
+        123
+    </div>
+</div>
 </textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:80%;height:200px;"><table style="width:100%;" cellpadding="2" cellspacing="0" border="1" bordercolor="#000000">
