--- a/test/main.html
+++ b/test/main.html
@@ -216,7 +216,7 @@
 					urlType : 'absolute',
 					themeType : 'simple',
 					allowImageUpload : true,
-					allowImageRemote : false,
+					allowImageRemote : true,
 					allowFileUpload : true,
 					designMode : true,
 					allowFileManager : true,
