--- a/test/main.html
+++ b/test/main.html
@@ -58,12 +58,140 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:500px;"><div>
-    <img alt="" src="/kindeditor/plugins/emoticons/images/0.gif" /> 
-    <div>
-        123
-    </div>
-</div>
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:500px;"><p>
+	KindEditor
+</p>
+<p>
+	KindEditor
+</p>
+<p>
+	KindEditor
+</p>
+<p>
+	KindEditor
+</p>
+<p>
+	KindEditor
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<p>
+		KindEditor
+	</p>
+	<table style="width:100%;" cellpadding="2" cellspacing="0" border="1" bordercolor="#000000">
+		<tbody>
+			<tr>
+				<td>
+					<br />
+				</td>
+				<td>
+					<br />
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<br />
+				</td>
+				<td>
+					<br />
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<br />
+				</td>
+				<td>
+					<br />
+				</td>
+			</tr>
+		</tbody>
+	</table>
+<br />
+</p>
 </textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:80%;height:200px;"><table style="width:100%;" cellpadding="2" cellspacing="0" border="1" bordercolor="#000000">
