--- a/test/total.html
+++ b/test/total.html
@@ -25,8 +25,7 @@
 		<input type="button" id="removeAll" value="Remove all" />
 		<input type="reset" name="button" value="Reset" />
 		<!-- <iframe src="http://www.kindsoft.net/"></iframe> -->
-		<script src="../kindeditor.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../kindeditor-all.js"></script>
 		<script src="../lang/en.js"></script>
 		
 		<script>
@@ -34,7 +33,8 @@
 			KindEditor.ready(function(K) {
 				window.editor = K.create('textarea', {
 					allowFileManager : true,
-					langType : 'en'
+					langType : 'en',
+					autoHeightMode : true
 				});
 				K('#removeAll').click(function(e) {
 					K.remove('textarea');
