--- a/test/main.html
+++ b/test/main.html
@@ -59,7 +59,7 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<textarea name="content1" cols="100" rows="20" style="width:100%;height:200px;"><div>
-    <img alt="" src="/kindeditor/plugins/emoticons/images/0.gif" /> 
+    <img alt="" src="/kindeditor/plugins/emoticons/images/0.gif" />
     <div>
         123
     </div>
@@ -248,7 +248,7 @@
 						select.options.add(new Option(url, url));
 					},
 					afterCreate : function() {
-						this.loadPlugin('autoheight');
+						//this.loadPlugin('autoheight');
 					}
 				});
 				K('#create1').click(function(e) {
@@ -322,7 +322,7 @@
 						K('#uploadFile')[0].focus();
 					},
 					afterCreate : function() {
-						this.loadPlugin('autoheight');
+						//this.loadPlugin('autoheight');
 					}
 				});
 				K('#create2').click(function(e) {
