--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="jumbotron">
 				<h1>What is KindEditor?</h1>
 				<p class="lead">KindEditor is a lightweight, Open Source(LGPL), cross browser, web based WYSIWYG HTML editor. KindEditor has the ability to convert standard textareas to rich text editing.</p>
-				<p><a class="inline-block btn" href="#">DOWNLOAD</a></p>
+				<p><a class="inline-block btn" href="download">DOWNLOAD</a></p>
 			</div>
 
 			<div class="row marketing">
