Modify index link

--- a/download.html
+++ b/download.html
@@ -10,13 +10,13 @@
 		<div class="container">
 			<div class="header fix">
 				<ul class="fix right">
-					<li><a href="index">Home</a></li>
+					<li><a href="./">Home</a></li>
 					<li><a href="demo">Demo</a></li>
 					<li class="active"><a href="download">Download</a></li>
 					<li><a href="documentation">Documentation</a></li>
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
-				<h3><a href="index">KindEditor</a></h3>
+				<h3><a href="./">KindEditor</a></h3>
 			</div>
 
 			<div>
