--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>KindEditor - WYSIWYG HTML editor</title>
 		<link rel="shortcut icon" type="image/x-icon" href="static/app/favicon.ico" />
 		<link rel="stylesheet" href="static/app/main.css" />
+		<link rel="stylesheet" href="static/kindeditor/themes/default/default.css" />
+		<script src="static/kindeditor/kindeditor-min.js"></script>
+		<script src="static/kindeditor/lang/en.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -20,34 +23,34 @@
 			</div>
 
 			<div class="jumbotron">
-				<h1>What is KindEditor?</h1>
-				<p class="lead">KindEditor is a lightweight, Open Source(LGPL), cross browser, web based WYSIWYG HTML editor. KindEditor has the ability to convert standard textareas to rich text editing.</p>
-				<p><a class="inline-block btn" href="download">DOWNLOAD</a></p>
-			</div>
+	<h1>What is KindEditor?</h1>
+	<p class="lead">KindEditor is a lightweight, Open Source(LGPL), cross browser, web based WYSIWYG HTML editor. KindEditor has the ability to convert standard textareas to rich text editing.</p>
+	<p><a class="inline-block btn" href="download">DOWNLOAD</a></p>
+</div>
 
-			<div class="row marketing">
-				<div class="col-12">
-					<h4>Lightweight</h4>
-					<p>Only 30KB after minified and gzipped.</p>
+<div class="row marketing">
+	<div class="col-12">
+		<h4>Lightweight</h4>
+		<p>Only 30KB after minified and gzipped.</p>
 
-					<h4>Performance</h4>
-					<p>Paste from Word and keep all formatting intact.</p>
+		<h4>Performance</h4>
+		<p>Paste from Word and keep all formatting intact.</p>
 
-					<h4>Customizable</h4>
-					<p>Open Source, easy to change themes and plugins.</p>
-				</div>
+		<h4>Customizable</h4>
+		<p>Open Source, easy to change themes and plugins.</p>
+	</div>
 
-				<div class="col-12">
-					<h4>Cross browser</h4>
-					<p>Compatible with IE6+, Firefox, Chrome, Safari, Opera, and more.</p>
+	<div class="col-12">
+		<h4>Cross browser</h4>
+		<p>Compatible with IE6+, Firefox, Chrome, Safari, Opera, and more.</p>
 
-					<h4>Full featured</h4>
-					<p>Completely functional with no limitations. </p>
+		<h4>Full featured</h4>
+		<p>Completely functional with no limitations. </p>
 
-					<h4>Powerful API</h4>
-					<p>Includes Node, W3C Range, Selection DOM API.</p>
-				</div>
-			</div>
+		<h4>Powerful API</h4>
+		<p>Includes Node, W3C Range, Selection DOM API.</p>
+	</div>
+</div>
 
 			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
