--- a/src/demo.html
+++ b/src/demo.html
@@ -23,7 +23,7 @@
 <div class="module">
 	<h3>Editor examples</h3>
 	<ul>
-		<li><a href="examples/default.html" target="_blank">default.html</a> (Default example)</li>
+		<li><a href="examples/default" target="_blank">Default example</a></li>
 		<li><a href="examples/simple.html" target="_blank">simple.html</a> (Simple example)</li>
 		<li><a href="examples/dynamic-load.html" target="_blank">dynamic-load.html</a> (Dynamic load)</li>
 		<li><a href="examples/multi-language.html" target="_blank">multi-language.html</a> (Multi-language)</li>
