--- a/download.html
+++ b/download.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor - WYSIWYG HTML editor</title>
-		<link rel="shortcut icon" type="image/x-icon" href="static/app/favicon.ico" />
-		<link rel="stylesheet" href="static/app/main.css" />
-		<link rel="stylesheet" href="static/kindeditor/themes/default/default.css" />
-		<script src="static/kindeditor/kindeditor-min.js"></script>
-		<script src="static/kindeditor/lang/en.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="./static/app/favicon.ico" />
+		<link rel="stylesheet" href="./static/app/main.css" />
+		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
+		<script src="./static/kindeditor/kindeditor-min.js"></script>
+		<script src="./static/kindeditor/lang/en.js"></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="header fix">
 				<ul class="fix right">
 					<li><a href="./">Home</a></li>
-					<li><a href="demo">Demo</a></li>
-					<li class="active"><a href="download">Download</a></li>
-					<li><a href="documentation">Documentation</a></li>
+					<li><a href="./demo">Demo</a></li>
+					<li class="active"><a href="./download">Download</a></li>
+					<li><a href="./documentation">Documentation</a></li>
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
