--- a/examples/file-manager.html
+++ b/examples/file-manager.html
@@ -2,6 +2,30 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<title>KindEditor - WYSIWYG HTML editor</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
+	</head>
+	<body>
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+			<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
 		<title>FileManager Examples</title>
 		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
 		<script src="../static/kindeditor/kindeditor.js"></script>
@@ -29,5 +53,14 @@
 	</head>
 	<body>
 		<input type="text" id="url" value="" /> <input type="button" id="filemanager" value="浏览服务器" />
+	</body>
+</html>
+
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
+		</div>
 	</body>
 </html>
