--- a/src/layout.html
+++ b/src/layout.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor - WYSIWYG HTML editor</title>
-		<link rel="shortcut icon" type="image/x-icon" href="static/app/favicon.ico" />
-		<link rel="stylesheet" href="static/app/main.css" />
-		<link rel="stylesheet" href="static/kindeditor/themes/default/default.css" />
-		<script src="static/kindeditor/kindeditor-min.js"></script>
-		<script src="static/kindeditor/lang/en.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="{{appUrl}}/static/app/favicon.ico" />
+		<link rel="stylesheet" href="{{appUrl}}/static/app/main.css" />
+		<link rel="stylesheet" href="{{appUrl}}/static/kindeditor/themes/default/default.css" />
+		<script src="{{appUrl}}/static/kindeditor/kindeditor-min.js"></script>
+		<script src="{{appUrl}}/static/kindeditor/lang/en.js"></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="header fix">
 				<ul class="fix right">
-					<li{{#if env.index}} class="active"{{/if}}><a href="./">Home</a></li>
-					<li{{#if env.demo}} class="active"{{/if}}><a href="demo">Demo</a></li>
-					<li{{#if env.download}} class="active"{{/if}}><a href="download">Download</a></li>
-					<li{{#if env.documentation}} class="active"{{/if}}><a href="documentation">Documentation</a></li>
+					<li{{#if page.index}} class="active"{{/if}}><a href="{{appUrl}}/">Home</a></li>
+					<li{{#if page.demo}} class="active"{{/if}}><a href="{{appUrl}}/demo">Demo</a></li>
+					<li{{#if page.download}} class="active"{{/if}}><a href="{{appUrl}}/download">Download</a></li>
+					<li{{#if page.documentation}} class="active"{{/if}}><a href="{{appUrl}}/documentation">Documentation</a></li>
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
-				<h3><a href="./">KindEditor</a></h3>
+				<h3><a href="{{appUrl}}/">KindEditor</a></h3>
 			</div>
 
 			{{{content}}}
