--- a/demo.html
+++ b/demo.html
@@ -47,8 +47,8 @@
 <div class="module">
 	<h3>Editor examples</h3>
 	<ul>
-		<li><a href="examples/default" target="_blank">Default example</a></li>
-		<li><a href="examples/simple.html" target="_blank">simple.html</a> (Simple example)</li>
+		<li><a href="examples/default">Default example</a></li>
+		<li><a href="examples/simple">Simple example</a></li>
 		<li><a href="examples/dynamic-load.html" target="_blank">dynamic-load.html</a> (Dynamic load)</li>
 		<li><a href="examples/multi-language.html" target="_blank">multi-language.html</a> (Multi-language)</li>
 		<li><a href="examples/readonly.html" target="_blank">readonly.html</a> (Readonly)</li>
