--- a/examples/dynamic-load.html
+++ b/examples/dynamic-load.html
@@ -14,7 +14,7 @@
 			<div class="header fix">
 				<ul class="fix right">
 					<li><a href="./../">Home</a></li>
-					<li><a href="./../demo">Demo</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
 					<li><a href="./../download">Download</a></li>
 					<li><a href="./../documentation">Documentation</a></li>
 					<li><a href="http://kindeditor.net/">中文站</a></li>
