--- a/download.html
+++ b/download.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<p><!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -20,16 +20,17 @@
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
-			</div>
+			</div></p>
 
-			<h2 id="downloads">Downloads</h2>
+<h2 id="downloads">Downloads</h2>
 
 <p>http://code.google.com/p/kindeditor/downloads/list</p>
 
-			<div class="footer">
+<p>			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
 
 		</div>
 	</body>
 </html>
+</p>
