--- a/examples/simple.html
+++ b/examples/simple.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>KindEditor - WYSIWYG HTML editor</title>
+		<title>Simple example</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
 		<link rel="stylesheet" href="./../static/app/main.css" />
 		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
@@ -22,7 +22,7 @@
 				<h3><a href="./../">KindEditor</a></h3>
 			</div>
 
-			<script type="text/javascript"><!--
+<script type="text/javascript"><!--
 google_ad_client = "ca-pub-7116729301372758";
 google_ad_slot = "5052271949";
 google_ad_width = 728;
@@ -32,6 +32,8 @@ google_ad_height = 90;
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+
+
 
 <div class="module">
 	<h3>Simple example</h3>
