--- a/src/header.inc.html
+++ b/src/header.inc.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>KindEditor - WYSIWYG HTML editor</title>
+		<title>{{pageTitle}}</title>
 		<link rel="shortcut icon" type="image/x-icon" href="{{appUrl}}/static/app/favicon.ico" />
 		<link rel="stylesheet" href="{{appUrl}}/static/app/main.css" />
 		<link rel="stylesheet" href="{{appUrl}}/static/kindeditor/themes/default/default.css" />
@@ -21,13 +21,3 @@
 				</ul>
 				<h3><a href="{{appUrl}}/">KindEditor</a></h3>
 			</div>
-
-			{{{content}}}
-
-			<div class="footer">
-				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
-			</div>
-
-		</div>
-	</body>
-</html>
