--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,7 @@
+{{include header}}
+
+<title>KindEditor - WYSIWYG HTML editor</title>
+
 <div class="jumbotron">
 	<h1>What is KindEditor?</h1>
 	<p class="lead">KindEditor is a lightweight, Open Source(LGPL), cross browser, web based WYSIWYG HTML editor. KindEditor has the ability to convert standard textareas to rich text editing.</p>
@@ -27,3 +31,5 @@
 		<p>Includes Node, W3C Range, Selection DOM API.</p>
 	</div>
 </div>
+
+{{include footer}}
