--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,9 @@
 				<h3><a href="./">KindEditor</a></h3>
 			</div>
 
-			<div class="module">
+
+
+<div class="module">
 	<script type="text/javascript"><!--
 	google_ad_client = "ca-pub-7116729301372758";
 	/* 演示页 */
@@ -49,7 +51,7 @@
 	<ul>
 		<li><a href="examples/default">Default example</a></li>
 		<li><a href="examples/simple">Simple example</a></li>
-		<li><a href="examples/dynamic-load.html" target="_blank">dynamic-load.html</a> (Dynamic load)</li>
+		<li><a href="examples/dynamic-load">Dynamic load example</li>
 		<li><a href="examples/multi-language.html" target="_blank">multi-language.html</a> (Multi-language)</li>
 		<li><a href="examples/readonly.html" target="_blank">readonly.html</a> (Readonly)</li>
 		<li><a href="examples/newline.html" target="_blank">newline.html</a> (Newline tag)</li>
@@ -86,8 +88,6 @@
 		});
 	});
 </script>
-
-
 			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
