--- a/documentation.html
+++ b/documentation.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<p><!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -20,9 +20,9 @@
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
-			</div>
+			</div></p>
 
-			<h2 id="installation">Installation</h2>
+<h2 id="installation">Installation</h2>
 
 <ol>
 <li><p>Download the latest version of the editor.</p></li>
@@ -63,10 +63,11 @@ editor.html('HTML code');
 </code></p></li>
 </ol>
 
-			<div class="footer">
+<p>			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
 
 		</div>
 	</body>
 </html>
+</p>
