--- a/src/examples/simple.html
+++ b/src/examples/simple.html
@@ -1,13 +1,8 @@
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-7116729301372758";
-google_ad_slot = "5052271949";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Simple example</title>
 
 <div class="module">
 	<h3>Simple example</h3>
@@ -31,3 +26,5 @@ KindEditor.ready(function(K) {
 	});
 });
 </script>
+
+{{include ../footer}}
